@@ -1,4 +1,8 @@
-﻿w17 20.06.2014 13:46:02 +0400 - build 3956
+﻿drkns 20.06.2014 20:12:27 +0200 - build 3957
+
+1. Если плагин содержит на своей панели объекты с атрибутом FILE_ATTRIBUTE_REPARSE_POINT - считаем, что это симлинки.
+
+w17 20.06.2014 13:46:02 +0400 - build 3956
 
 1. Experimental. M#2684: Возможность смены кодировки путём перечитывания файла
 
